# marginalTailAdaptiveFlow

./: .gitignore  setup.cfg
marginal_tail_adaptive_flows.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
synthetic_experiments/: data_generators.py
