[metadata]
name = marginal_tail_adaptive_flows
version = 0.0.1
author = ..
author_email = tennessee.wallaceh@gmail.com
description = A helper package for accessing code in https://github.com/MikeLasz/marginalTailAdaptiveFlow
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9